# mapd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  example.ipynb  example.py  example_jokke.ipynb  pyproject.toml  visual_test.ipynb
.github/workflows/: flake8.yaml  isort.yaml  release.yml
lightning_logs/version_12/: hparams.yaml
lightning_logs/version_23/checkpoints/: epoch=3-step=6876.ckpt
lightning_logs/version_24/checkpoints/: epoch=1-step=3438.ckpt
lightning_logs/version_25/checkpoints/: epoch=1-step=3438.ckpt
lightning_logs/version_26/checkpoints/: epoch=0-step=1719.ckpt
lightning_logs/version_48/: hparams.yaml
mapd/: __init__.py  mapd_module.py
mapd/classifiers/: cv_probe_suite_estimator.py  make_mapd_classifier.py  make_predictions.py  probe_suite_estimator.py
mapd/probes/: make_probe_suites.py  probe_suite_generator.py
mapd/proxies/: data_wrapper.py  proxy_calculator.py
mapd/utils/: make_dataloaders.py  wrap_dataset.py
mapd/visualization/: consistently_learned_plot.py  first_learned_plot.py  loss_curve_plot.py  probe_accuracy_plot.py  probe_accuracy_val.py  surface_predictions.py  visualization_example.py  visualization_tool.py
proxies/: 0_part-0.parquet  10_part-0.parquet  11_part-0.parquet  12_part-0.parquet  13_part-0.parquet  14_part-0.parquet  15_part-0.parquet  16_part-0.parquet  17_part-0.parquet  18_part-0.parquet  19_part-0.parquet  1_part-0.parquet  2_part-0.parquet  3_part-0.parquet  4_part-0.parquet  5_part-0.parquet  6_part-0.parquet  7_part-0.parquet  8_part-0.parquet  9_part-0.parquet
(+21 files in other folders)
