[tool.poetry]
name = "mapd"
version = "0.1.0"
description = "Package for applying MAP-D to your project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mapd"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
torch = "^2.0.0"
lightning = "^2.0.1.post0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
matplotlib = "^3.7.1"
xgboost = "^1.7.5"
torchvision = "^0.15.1"
dill = "^0.3.6"
torchinfo = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"
wheel = "^0.40.0"
setuptools = "^67.7.2"
pyperf = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
